--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,4 +1,5 @@
-<%- include("layout.ejs") %>
+<%- include("header.ejs") %>
+
 
 <h2>Create a New Post</h2>
 
@@ -11,3 +12,4 @@
     
     <button type="submit">Publish</button>
 </form>
+<%- include("footer.ejs") %>
