--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,13 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="/edit.css">
+  <link rel="stylesheet" href="/header.css">
+<link rel="stylesheet" href="/footer.css">
+
 </head>
-<body>
-  <%- include("header") %>
+
+<%- include("header") %>
 
 <div class="form-container">
   <h2>Edit Your Blog Post</h2>
@@ -39,6 +37,3 @@
 </div>
 
 <%- include("footer") %>
-
-</body>
-</html>
