--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
     <header>
         <div class="left">
             <div class="main">
-                <h1>Blogger</h1>
+                <a href="/"><h1 id="blog">Blogger</h1></a>
                 <ul class="left-options">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Create</a></li>
