--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,33 +7,23 @@
 
 <%- include("header") %>
 
-<div class="form-container">
-  <h2>Edit Your Blog Post</h2>
 
-  <form method="POST" action="/edit/<%= post.id %>">
-    <div class="form-group">
-      <label for="title">Title:</label>
-      <input
-        type="text"
-        id="title"
-        name="title"
-        value="<%= post.title %>"
-        required
-      />
-    </div>
-
-    <div class="form-group">
-      <label for="content">Content:</label>
-      <textarea
-        id="content"
-        name="content"
-        rows="8"
-        required
-      ><%= post.content %></textarea>
-    </div>
-
-    <button type="submit" class="btn">Update Post</button>
+  <h1>Edit Post</h1>
+  <form action="/edit/<%= post.id %>" method="POST">
+    <label>Title:</label><br/>
+    <input type="text" name="title" value="<%= post.title %>" required /><br/><br/>
+    
+    <label>Content:</label><br/>
+    <textarea name="content" rows="10" cols="50" required><%= post.content %></textarea><br/><br/>
+    
+    <label>Author:</label><br/>
+    <input type="text" name="author" value="<%= post.author %>" /><br/><br/>
+    
+    <button type="submit">Update Post</button>
   </form>
-</div>
+  <a href="/">Back to posts</a>
+</body>
+</html>
+
 
 <%- include("footer") %>
