--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,26 +4,41 @@
 <%- include("header") %>
 
 <div class="container">
-  <h1>All Blog Posts</h1>
-
-  <a href="/new" class="btn btn-create">Create New Post</a>
+    <h1>All Posts</h1>
 
   <% if (posts.length === 0) { %>
-    <p class="no-posts">No posts available. Start by creating one!</p>
+    <p>No posts yet.</p>
   <% } else { %>
-    <% posts.forEach((post) => { %>
-      <div class="card">
-        <h2><%= post.title %></h2>
-        <p><%= post.content %></p>
-        <div class="btn-group">
-          <a href="/edit/<%= post.id %>" class="btn btn-edit">Edit</a>
-          <form action="/delete/<%= post.id %>" method="POST" style="display:inline;">
-            <button type="submit" class="btn btn-delete">Delete</button>
-          </form>
-        </div>
-      </div>
-    <% }) %>
+<ul>
+  <% posts.forEach(post => { %>
+    <li>
+      <h3><%= post.title %></h3>
+      <p><%= post.content %></p>
+      <small>By: <%= post.author || "Unknown" %></small><br/>
+
+      <form action="/delete/<%= post.id %>" method="POST" style="display:inline;">
+        <button type="submit" onclick="return confirm('Are you sure you want to delete this post?');">Delete</button>
+      </form>
+    </li>
+  <% }) %>
+</ul>
   <% } %>
+
+  <hr/>
+
+  <h2>Add New Post</h2>
+  <form action="/add" method="POST">
+    <label>Title:</label><br/>
+    <input type="text" name="title" required /><br/><br/>
+
+    <label>Content:</label><br/>
+    <textarea name="content" rows="5" cols="50" required></textarea><br/><br/>
+
+    <label>Author:</label><br/>
+    <input type="text" name="author" /><br/><br/>
+
+    <button type="submit">Add Post</button>
+  </form>
 </div>
 
 <%- include("footer") %>
